[package]
name = "klickhouse"
version = "0.10.2"
authors = ["Protryon <max.bruce12@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Protryon/klickhouse"
description = "Klickhouse is a pure Rust SDK for working with Clickhouse with the native protocol in async environments with minimal boilerplate and maximal performance."
keywords = [ "clickhouse", "database", "tokio", "sql" ]
readme = "../README.md"
autotests = false

[package.metadata.docs.rs]
all-features = true

[[test]]
name = "test"
path = "tests/main.rs"

[dependencies]
tokio = { version = "1.21", features = ["io-util", "net", "sync", "rt", "macros"] }
async-trait = "0.1"
thiserror = "1.0"
log = "0.4"
indexmap = { version = "2.0" }
uuid = { version = "1.4", features = ["v4"] }
chrono = "0.4"
chrono-tz = "0.8"
futures = "0.3"
tokio-stream = "0.1"
libc = "0.2"
lz4 = { version = "1.24", optional = true }
klickhouse_derive = { version = "=0.10.0", optional = true, path = "../klickhouse_derive" }
cityhash-rs = "1.0"
bb8 = { version = "0.8", optional = true }
# must be locked due to transmute
refinery-core = { version = "=0.8.10", optional = true }
time = { version = "0.3.5", features = ["parsing", "formatting"], optional = true }
compiler-tools = "0.1.7"
compiler-tools-derive = "0.1.7"
rust_decimal = { version = "1.30", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio-rustls = { version = "0.24.1", optional = true }
paste = "1.0.14"
geo-types = {version = "0.7.12", optional = true}

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
env_logger = "0.10"

[features]
default = ["derive", "compression", "serde"]
derive = ["klickhouse_derive"]
compression = ["lz4"]
geo-types = ["dep:geo-types"]
refinery = ["refinery-core", "time"]
serde = ["dep:serde", "serde_json", "uuid/serde", "chrono/serde"]
tls = ["tokio-rustls"]

[build-dependencies]
rustc_version = "0.3"
