[package]
name = "klickhouse"
version = "0.14.0"
authors = ["Protryon <max.bruce12@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Protryon/klickhouse"
description = "Klickhouse is a pure Rust SDK for working with Clickhouse with the native protocol in async environments with minimal boilerplate and maximal performance."
keywords = [ "clickhouse", "database", "tokio", "sql" ]
readme = "../README.md"
autotests = false
rust-version = "1.75.0"

[package.metadata.docs.rs]
all-features = true

[[test]]
name = "test"
path = "tests/main.rs"

[[example]]
name = "pool"
required-features = ["bb8"]

[dependencies]
tokio = { version = "1.45", features = ["io-util", "net", "rt", "macros"] }
async-trait = { version = "0.1", optional = true }
thiserror = "2.0"
log = "0.4"
indexmap = { version = "2.9" }
uuid = { version = "1.17", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["std", "now"] }
chrono-tz = "0.10"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
tokio-stream = "0.1"
lz4 = { version = "1.28", optional = true }
klickhouse_derive = { version = "=0.13.0", optional = true, path = "../klickhouse_derive" }
cityhash-rs = "1.0"
bb8 = { version = "0.9", optional = true }
# must be locked due to transmute
refinery-core = { version = "=0.8.14", optional = true }
time = { version = "0.3", features = ["parsing", "formatting"], optional = true }
compiler-tools = "0.2"
compiler-tools-derive = "0.2"
rust_decimal = { version = "1.37", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
tokio-rustls = { version = "0.26", optional = true }
rustls-pki-types = { version = "1.12", optional = true }
paste = "1.0"
geo-types = { version = "0.7", optional = true}

[dev-dependencies]
tokio = { version = "1.45", features = ["rt-multi-thread"] }
env_logger = "0.11"

[features]
default = ["derive", "compression", "serde"]
derive = ["klickhouse_derive"]
compression = ["lz4"]
geo-types = ["dep:geo-types"]
refinery = ["refinery-core", "time", "dep:async-trait"]
serde = ["dep:serde", "serde_json", "uuid/serde", "chrono/serde"]
tls = ["tokio-rustls", "rustls-pki-types"]
bb8 = ["dep:bb8"]

[build-dependencies]
rustc_version = "0.4"
