[package]
name = "klickhouse_derive"
version = "0.1.0"
authors = ["Protryon <max.bruce12@gmail.com>"]
edition = "2018"
license = "GPL-3.0-or-later"
repository = "https://github.com/Protryon/klickhouse"
description = "proc-macro crate for klickhouse"
keywords = [ "clickhouse", "database", "tokio", "sql" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "klickhouse_derive"
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"